added comments to better understanding of swagger
