# src/routers/hotel.js
@@ -30,6 +30,7 @@ const User = require("../models/user");
 const router = new express.Router();
 
 router.post('/hotels', async (req, res) => {
+    // #swagger.tags = ['Hotels']
     const {
         search, checkInYear, checkInMonth, checkInDay, checkOutYear,
         checkOutMonth, checkOutDay, adultCount, childCount, roomCount
@@ -121,56 +122,20 @@ router.post('/hotels', async (req, res) => {
     }
 })
 
-router.get('/hotel/:id',
-    async (req, res) => {
-        let hotelDetails = await HotelDetails.findOne({'hotelId': req.params.id})
+router.get('/hotel/:id', async (req, res) => {
+    // #swagger.tags = ['Hotels']
+    //  #swagger.parameters['id'] = { description: 'hotel id' }
+    let hotelDetails = await HotelDetails.findOne({'hotelId': req.params.id})
 
-        let startTime = new Date();
+    let startTime = new Date();
 
-        const hotel = await Hotel.findOne({'_id': req.params.id});
+    const hotel = await Hotel.findOne({'_id': req.params.id});
 
-        let hotelDetail;
-        let details;
+    let hotelDetail;
+    let details;
 
-        // If exists in db return it without scraping.
-        if (hotelDetails) {
-            hotelDetail = await hotelDetailMerger(hotel, hotelDetails)
-
-            details = {
-                hotelDetail
-            }
-
-            res.status(200).send(details)
-            return;
-        }
-
-        let endTime = new Date();
-        let elapsedTime = endTime - startTime;
-        console.log(`Elapsed time to fetch hotel: ${elapsedTime}ms`);
-
-        const hotelId = hotel["_id"];
-        const browser = browsers[2];
-
-        if (hotel.website === 'booking.com') {
-            hotelDetails = await scrapeHotelDetailsBooking(hotel.hotelUrl, hotelId, browser);
-        } else if (hotel.website === 'hotels.com') {
-            hotelDetails = await scrapeHotelDetailsHotels(hotel.hotelUrl, hotelId, browser);
-        } else if (hotel.website === 'expedia.com') {
-            hotelDetails = await scrapeHotelDetailsExpedia(hotel.hotelUrl, hotelId, browser);
-        } else if (hotel.website === 'orbitz.com') {
-            hotelDetails = await scrapeHotelDetailsOrbitz(hotel.hotelUrl, hotelId, browser);
-        } else if (hotel.website === 'getaroom.com') {
-            hotelDetails = await scrapeHotelDetailsGetARoom(hotel.hotelUrl, hotelId, browser);
-        }
-
-        startTime = new Date();
-
-        await HotelDetails.create(hotelDetails)
-
-        endTime = new Date();
-        elapsedTime = endTime - startTime;
-        console.log(`Elapsed time to save: ${elapsedTime}ms`);
-
+    // If exists in db return it without scraping.
+    if (hotelDetails) {
         hotelDetail = await hotelDetailMerger(hotel, hotelDetails)
 
         details = {
@@ -178,9 +143,47 @@ router.get('/hotel/:id',
         }
 
         res.status(200).send(details)
-    })
+        return;
+    }
+
+    let endTime = new Date();
+    let elapsedTime = endTime - startTime;
+    console.log(`Elapsed time to fetch hotel: ${elapsedTime}ms`);
+
+    const hotelId = hotel["_id"];
+    const browser = browsers[2];
+
+    if (hotel.website === 'booking.com') {
+        hotelDetails = await scrapeHotelDetailsBooking(hotel.hotelUrl, hotelId, browser);
+    } else if (hotel.website === 'hotels.com') {
+        hotelDetails = await scrapeHotelDetailsHotels(hotel.hotelUrl, hotelId, browser);
+    } else if (hotel.website === 'expedia.com') {
+        hotelDetails = await scrapeHotelDetailsExpedia(hotel.hotelUrl, hotelId, browser);
+    } else if (hotel.website === 'orbitz.com') {
+        hotelDetails = await scrapeHotelDetailsOrbitz(hotel.hotelUrl, hotelId, browser);
+    } else if (hotel.website === 'getaroom.com') {
+        hotelDetails = await scrapeHotelDetailsGetARoom(hotel.hotelUrl, hotelId, browser);
+    }
+
+    startTime = new Date();
+
+    await HotelDetails.create(hotelDetails)
+
+    endTime = new Date();
+    elapsedTime = endTime - startTime;
+    console.log(`Elapsed time to save: ${elapsedTime}ms`);
+
+    hotelDetail = await hotelDetailMerger(hotel, hotelDetails)
+
+    details = {
+        hotelDetail
+    }
+
+    res.status(200).send(details)
+})
 
 router.get('/favorites', authenticate, async (req, res) => {
+    // #swagger.tags = ['Hotels']
     const user = await User.findOne({email: req.user.email});
     const favoriteHotels = await FavoriteHotels.find({userId: user["_id"]});
 
@@ -188,6 +191,9 @@ router.get('/favorites', authenticate, async (req, res) => {
 });
 
 router.patch('/favorites/:hotelId', authenticate, async (req, res) => {
+    // #swagger.tags = ['Hotels']
+    // #swagger.description = 'Add or Delete a hotel from the favorite hotel list.'
+    //  #swagger.parameters['hotelId'] = { description: 'Id of the hotel to add to the favorite list.' }
     const user = await User.findOne({email: req.user.email});
     let favoriteHotels = await FavoriteHotels.findOne({userId: user["_id"]});
 
@@ -215,6 +221,8 @@ router.patch('/favorites/:hotelId', authenticate, async (req, res) => {
 });
 
 router.delete('/favorites', authenticate, async (req, res) => {
+    // #swagger.tags = ['Hotels']
+    // #swagger.description = 'Clear the favorite hotel list of user.'
     const user = await User.findOne({email: req.user.email});
 
     await FavoriteHotels.deleteMany({userId: user["_id"]})
