# src/swagger_output.json
@@ -9,7 +9,7 @@
   "basePath": "/",
   "tags": [
     {
-      "name": "Hotel",
+      "name": "Hotels",
       "description": "Endpoints related to hotels"
     },
     {
@@ -17,8 +17,8 @@
       "description": "Endpoints related to authentication"
     },
     {
-      "name": "Feedback",
-      "description": "Endpoints related to feedback"
+      "name": "Feedbacks",
+      "description": "Endpoints related to user feedback"
     }
   ],
   "schemes": [
@@ -33,6 +33,9 @@
   "paths": {
     "/google": {
       "get": {
+        "tags": [
+          "Auth"
+        ],
         "description": "",
         "parameters": [],
         "responses": {}
@@ -40,6 +43,9 @@
     },
     "/google/callback": {
       "get": {
+        "tags": [
+          "Auth"
+        ],
         "description": "",
         "parameters": [],
         "responses": {}
@@ -47,6 +53,9 @@
     },
     "/apple": {
       "get": {
+        "tags": [
+          "Auth"
+        ],
         "description": "",
         "parameters": [],
         "responses": {}
@@ -54,6 +63,9 @@
     },
     "/apple/callback": {
       "get": {
+        "tags": [
+          "Auth"
+        ],
         "description": "",
         "parameters": [],
         "responses": {}
@@ -61,6 +73,9 @@
     },
     "/register": {
       "post": {
+        "tags": [
+          "Auth"
+        ],
         "description": "",
         "parameters": [
           {
@@ -97,6 +112,9 @@
     },
     "/login": {
       "post": {
+        "tags": [
+          "Auth"
+        ],
         "description": "",
         "parameters": [
           {
@@ -127,6 +145,9 @@
     },
     "/protected": {
       "get": {
+        "tags": [
+          "Auth"
+        ],
         "description": "",
         "parameters": [
           {
@@ -152,6 +173,9 @@
     },
     "/hotels": {
       "post": {
+        "tags": [
+          "Hotels"
+        ],
         "description": "",
         "parameters": [
           {
@@ -203,13 +227,17 @@
     },
     "/hotel/{id}": {
       "get": {
+        "tags": [
+          "Hotels"
+        ],
         "description": "",
         "parameters": [
           {
             "name": "id",
             "in": "path",
             "required": true,
-            "type": "string"
+            "type": "string",
+            "description": "hotel id"
           }
         ],
         "responses": {
@@ -221,6 +249,9 @@
     },
     "/favorites": {
       "get": {
+        "tags": [
+          "Hotels"
+        ],
         "description": "",
         "parameters": [
           {
@@ -244,7 +275,10 @@
         }
       },
       "delete": {
-        "description": "",
+        "tags": [
+          "Hotels"
+        ],
+        "description": "Clear the favorite hotel list of user.",
         "parameters": [
           {
             "name": "authorization",
@@ -269,13 +303,17 @@
     },
     "/favorites/{hotelId}": {
       "patch": {
-        "description": "",
+        "tags": [
+          "Hotels"
+        ],
+        "description": "Add or Delete a hotel from the favorite hotel list.",
         "parameters": [
           {
             "name": "hotelId",
             "in": "path",
             "required": true,
-            "type": "string"
+            "type": "string",
+            "description": "Id of the hotel to add to the favorite list."
           },
           {
             "name": "authorization",
@@ -303,6 +341,9 @@
     },
     "/feedbacks": {
       "post": {
+        "tags": [
+          "Feedbacks"
+        ],
         "description": "",
         "parameters": [
           {
